<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/town"
        />

    <EditText
        android:id="@+id/edit_town_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/town_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/latitude"
        android:inputType="number|numberDecimal" />

    <EditText
        android:id="@+id/edit_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/longitude"
        android:inputType="number|numberDecimal" />

<Button
    android:id="@+id/adder_town_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/buttom_adder"
    android:enabled="false"
    />
<ProgressBar
    android:id="@+id/progress_bar_on_adder_town"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone"
    android:layout_gravity="center"
    />

</LinearLayout>